syntax = "proto3";

option csharp_namespace = "TestClient";

import "google/protobuf/timestamp.proto";

package event;

service EventContract {
  rpc GetEvents (GetEventsRequest) returns (GetEventsReply);
  rpc GetEventsByEventId (GetEventsByEventIdRequest) returns (GetEventsReply);
  rpc AddEvent (AddEventRequest) returns (AddEventReply);
  

}

message GetEventsRequest {
  string EventId = 1;
}

message GetEventsByEventIdRequest {
  string EventId = 1;
}

message AddEventRequest {
    string EventId = 1;
    string EventTitle = 2;
    string Description = 3;
    google.protobuf.Timestamp Date = 4; 
    int32 Price = 5; 
    string BookingStatus = 6;
    string Category = 7; 
    string LocationId = 8;
    int32 TotalTickets = 9;
    int32 TicketsSold = 10; 
}

message Event {
	string EventId = 1;
    string EventTitle = 2;
    string Description = 3;
    google.protobuf.Timestamp Date = 4; 
    int32 Price = 5; 
    string BookingStatus = 6;
    string Category = 7; 
    string LocationId = 8;
    int32 TotalTickets = 9;
    int32 TicketsSold = 10; 
}

message GetEventsReply {
  repeated Event events = 1;
}
message GetEventReply {
  Event events = 1;
}
message AddEventReply {
  int32 status_code = 1;
  string message = 2;
}


